# altspell

./: README.md  pyproject.toml  requirements.txt
altspell/: __init__.py  containers.py  convert.py  converter.py  database.py  exceptions.py  model.py  plugin.py  repositories.py  services.py
altspell/blueprints/: conversion.py  plugin.py  spelling_system.py  translation.py
altspell/utils/: hcaptcha.py  populate_altspelling_table.py
src/altspell/: __init__.py  conversion.py  hcaptcha.py  model.py  plugin.py
src/altspell/blueprints/: conversion.py  plugin.py
